#132867 Fixed z-index too low.

--- a/admin_menu.css
+++ b/admin_menu.css
@@ -13,7 +13,7 @@
 body { margin-top: 20px !important; }
 
 /* all lists */
-#admin_menu, #admin_menu ul { padding: 0; margin: 0; list-style: none; line-height: 1.4em; z-index: 10; }
+#admin_menu, #admin_menu ul { padding: 0; margin: 0; list-style: none; line-height: 1.4em; z-index: 999; }
 #admin_menu a { display: block; border-right: 1px solid #323232; padding: 4px 7px; font-weight: normal; color: #f0f0f0; text-decoration: none; }
 #admin_menu li li a { border-right: none; border-top: 1px solid #323232; }
 
